<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BirthdayApp</string>
    <string name="title_title">TitleFlowIndicator</string>

    <!-- Facebook events -->
    <string name="toast_facebook_auth_success">Facebook authentication is successful</string>
    <string name="toast_facebook_auth_fail">Error was occurred during Facebook authentication</string>
    <string name="facebook_post_published">Posted to Facebook successfully</string>
    <string name="facebook_post_publishing_failed">Post publishing was failed</string>
    <string name="facebook_logged_out">You are logged out</string>
    <string name="authorization">Authorization</string>
    <string name="default_birthday">13.09.1990</string>
    <string name="default_year">22 year</string>
    <string name="default_days">74</string>
    <string name="default_surname">Surname Name Middle Name</string>
    <string name="dialog_ok">OK</string>
    <string name="menu_alias">menu_done</string>
    <string name="gIcon">gIcon</string>
    <string name="vkIcon">vkIcon</string>
    <string name="fbIcon">fbIcon</string>
    <string name="menu_cancel">menu_cancel</string>
    <string name="image_stub">image_stub</string>
</resources>
