<?xml version="1.0" encoding="utf-8"?>

<TableLayout
        android:id="@+id/layout_root"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:stretchColumns="2"
        android:layout_height="match_parent">

    <TableRow>

        <TextView
                android:id="@+id/userInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/default_surname"
                android:gravity="left|top"
                android:textSize="20dip"/>
    </TableRow>

    <TableRow>

        <TextView
                android:id="@+id/dayCount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|top"
                android:text="@string/default_days"
                android:textSize="12dip"/>
    </TableRow>

    <TableRow>

        <TextView
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/default_birthday"
                android:gravity="left|bottom"
                android:textSize="14dip"/>
    </TableRow>

    <TableRow>

        <TextView
                android:id="@+id/yearCount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|bottom"
                android:text="@string/default_year"
                android:textSize="12dip"/>
    </TableRow>

    <TableRow>

        <Button
                android:id="@+id/dialogBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dialog_ok"
                />
    </TableRow>
</TableLayout>
